# ContextScope-BoundaryGNN

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
contextscope/: __init__.py  cli.py  data.py  evaluation.py  experiment.py  features.py  gpu_experiment.py  interventions.py  models.py
docs/: core_code_map.md  method_architecture.md  ppt_outline.md  research_idea.md
docs/figures/presentation/: README.md
scripts/: summarize_multiseed.py
tests/: test_pipeline.py
