[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contextscope-boundarygnn"
version = "0.1.0"
description = "Boundary-aware graph learning for social boundary-risk detection on public ego-network data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ContextScope Contributors" }
]
dependencies = []

[project.optional-dependencies]
cpu = [
  "numpy>=1.23"
]
cuda = [
  "numpy>=1.23",
  "torch>=2.0"
]
dev = [
  "numpy>=1.23"
]

[project.scripts]
contextscope = "contextscope.cli:main"

[tool.setuptools.packages.find]
include = ["contextscope*"]
